Complete the UI

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <span class="header-primary--main">Outdoors</span>
                 <span class="header-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
+    
     <main class="main">
         <section class="section-about">
             <div class="row">
@@ -112,7 +113,7 @@
             </div>            
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-mb-l">
                 <h3 class="header-secondary">
                     Most popular tours
@@ -143,7 +144,7 @@
                                     <div class="contact__price-box__pricing">$120</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
-                                    <a href="#" class="btn btn--white">Contact us</a>
+                                    <a href="#popup" class="btn btn--white">Contact us</a>
                                 </div>                                     
                             </div>
                         </div>
@@ -173,7 +174,7 @@
                                     <div class="contact__price-box__pricing">$124</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
-                                    <a href="#" class="btn btn--white">Contact us</a>
+                                    <a href="#popup" class="btn btn--white">Contact us</a>
                                 </div>                                     
                             </div>
                         </div>
@@ -203,7 +204,7 @@
                                     <div class="contact__price-box__pricing">$180</div>                                    
                                 </div>                           
                                 <div class="u-mt-m">
-                                    <a href="#" class="btn btn--white">Contact us</a>
+                                    <a href="#popup" class="btn btn--white">Contact us</a>
                                 </div>                                     
                             </div>
                         </div>
@@ -311,6 +312,71 @@
             </div>                                                     
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__logo">
+            <img src="./img/favicon.png" alt="" class="footer__img">
+        </div>
+
+        <div class="footer__navigation">
+            <div class="footer__navigation--left">
+                <ul class="footer__navigation-menu">
+                    <li class="footer__navigation-list">
+                        <a href="#" class="footer__navigation-item">
+                            Company
+                        </a>
+                    </li>
+                    <li class="footer__navigation-list">
+                        <a href="#" class="footer__navigation-item">
+                            Contact us
+                        </a>
+                    </li>
+                    <li class="footer__navigation-list">
+                        <a href="#" class="footer__navigation-item">
+                            Careers
+                        </a>
+                    </li>
+                    <li class="footer__navigation-list">
+                        <a href="#" class="footer__navigation-item">
+                            Privacy policy
+                        </a>
+                    </li>
+                    <li class="footer__navigation-list">
+                        <a href="#" class="footer__navigation-item">
+                            Terms
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer__navigation--right">
+                <p class="footer__navigation--right__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis atque quae earum voluptates est quia vero! Provident quia libero explicabo, neque quos optio corrupti nemo distinctio ab, sit aliquam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis atque quae earum voluptates est quia vero! Provident quia libero explicabo, neque quos optio corrupti nemo distinctio ab, sit aliquam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis atque quae earum voluptates est quia vero! Provident quia libero explicabo, neque quos optio corrupti nemo distinctio ab, sit aliquam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis atque quae earum voluptates est quia vero! Provident quia libero explicabo, neque quos optio corrupti nemo distinctio ab, sit aliquam.
+                </p>
+            </div>
+        </div>
+    </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="/img/nat-9.jpg" class="popup__img">
+                <img src="/img/nat-8.jpg" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="header-secondary">Start booking now</h1>
+                <h3 class="header-tertiary u-mt-s">Important - Please read the terms and conditions first</h3>                
+                <p class="paragraph popup__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis cupiditate aperiam repellat ipsum quae incidunt ipsam, omnis, praesentium velit aliquid nulla eaque? Excepturi, similique. Atque nobis debitis repudiandae est repellendus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eveniet amet neque est temporibus voluptatibus quia repudiandae ex, eos alias aspernatur explicabo at tenetur quasi! Libero ullam totam animi provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum quia expedita atque. Nesciunt dolor non provident saepe optio voluptates in neque sint. Minus in sit libero quae ducimus mollitia ab.</p>                                    
+                <div class="u-pull-left">
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>                
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
